paginate and search works

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,28 +1,16 @@
-<p>
-<form name="sform" action="" style="display:inline;">
-	<label for="item_name">Filter on Student name  : </label>
-	<%= text_field_tag("query", params['query'], :size => 10 ) %>
-</form>
-
-<%= image_tag("spinner.gif",
-        :align => "absmiddle",
-        :border => 0,
-        :id => "spinner",
-        :style =>"display: none;" ) %>
-</p>
-
-<%= observe_field :query,  :frequency => 2,
-				:update => "table",
-				:before => "Element.hide('table')",
-				:success => "Element.show('table')",
-				:url => {:action => :update_list },
-				:with => "query",
-				:on => "blur" %>
+<% form_tag students_path, :method => 'get' do %>
+  <p><% content_tag :label do %>
+    Find Name:
+    <%= text_field_tag :search, params[:search] %>
+	<% end %>
+	</p>
+<% end %>  
 
 <div id="table">
 	<%= render :partial => "student_list" %>
 </div>
 
+<%= will_paginate @students %>
 
 <br />
 
