--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,25 @@
-Ipsolurm
+<% content_for :left do %>
+  We'll read from the COMMENTS table to get any 'news' items that might be of interest
+  to the user.  I think the LEFT slab will work well for that.
+<% end %>
+
+<% content_for :right do %>
+  I'm not sure what we'll use the RIGHT slab for.  I'm sure we can think of something useful.
+<% end %>
+
+<h2>Welcome to the Gradesheet program.</h2>
+
+<p>
+It is out sincere hope that you will find this system useful beyond all compare.
+There are a few things you need to know about the system, so read the bullet
+points and be enlightened.
+</p>
+
+<h2>Interesting Tidbits</h2>
+<ul>
+  <li>TEST</li>
+  <li>TEST</li>
+  <li>TEST</li>
+  <li>TEST</li>
+
+</ul>
