--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,119 +1,110 @@
-* { margin: 0px; }
+* {
+margin: 0px;
+}
 body {
-	font-family: verdana,arial,helvetica,sans-serif;
-	font-size: 13px;
-	line-height: 18px;
-  min-width: 630px;      /* 2x (LC fullwidth +
-                            CC padding) + RC fullwidth */
+font-family: verdana,arial,helvetica,sans-serif;
+font-size: 13px;
+line-height: 18px;
+min-width: 630px;/* 2x (LC fullwidth +
+CC padding) + RC fullwidth */
 }
 #container {
 }
 #container .column {
-  float: left;
+float: left;
 }
 #content {
-  width: 100%;
+width: 100%;
 }
 #header {
-	background-color: #003366;
-	color: white;
+background-color: #003366;
+color: white;
 }
 #header .tagline {
-	font-size: 1.8em;
-	position: absolute;
-	top: 10px;
-	left: 125px;
+font-size: 1.8em;
+position: absolute;
+top: 10px;
+left: 125px;
 }
 #header .login {
-	float: right;
-	padding: 10px;
+float: right;
+padding: 10px;
 }
 #header .login a {
-	color: #FFFF00;
+color: #FFFF00;
 }
 #header img {
-	float: none;
-	padding: 10px;
+float: none;
+padding: 10px;
 }
-#header .flash {
-/*	border: 1px solid red;*/
-	background-color: #eaf;
-	color: #333;
-	position: absolute;
-	top: 45px;
-	left: 125px;
-/*	padding: 5px;*/
-	width: 300px;
-	text-align: center;
+#header .flash {/* border:1px solid red;*/
+background-color:green;
+color: #eee;
+/* position: absolute; */
+/* top:45px; */
+/* left: 125px; */
+/* padding:5px;*/
+/* width:300px; */
+text-align: center;
 }
 #footer {
-	margin: auto;
-	text-align: center;
-	font-size: 0.8em;
-  clear: both;
+margin: auto;
+text-align: center;
+font-size: 0.8em;
+clear: both;
 }
-
 /*** IE Fix ***/
 * html #left {
-  left: 150px;           /* RC fullwidth */
+left: 150px;/* RC fullwidth */
 }
-
 .paginate {
-	text-align: center;
-	
+text-align: center;
 }
 /*** Scaffold ***/
 .fieldWithErrors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+padding: 2px;
+background-color: red;
+display: table;
 }
-
 #errorExplanation {
-  width: 400px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+width: 400px;
+border: 2px solid red;
+padding: 7px;
+padding-bottom: 12px;
+margin-bottom: 20px;
+background-color: #f0f0f0;
 }
-
 #errorExplanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  background-color: #c00;
-  color: #fff;
+text-align: left;
+font-weight: bold;
+padding: 5px 5px 5px 15px;
+font-size: 12px;
+margin: -7px;
+background-color: #c00;
+color: #fff;
 }
-
 #errorExplanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 5px;
+color: #333;
+margin-bottom: 0;
+padding: 5px;
 }
-
 #errorExplanation ul li {
-  font-size: 12px;
-  list-style: square;
+font-size: 12px;
+list-style: square;
 }
 div.uploadStatus {
-  margin: 5px;
+margin: 5px;
 }
-
 div.progressBar {
-  margin: 5px;
+margin: 5px;
 }
-
 div.progressBar div.border {
-  background-color: #fff;
-  border: 1px solid gray;
-  width: 100%;
+background-color: #fff;
+border: 1px solid gray;
+width: 100%;
 }
-
 div.progressBar div.background {
-  background-color: #333;
-  height: 18px;
-  width: 0%;
+background-color: #333;
+height: 18px;
+width: 0%;
 }
