--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,27 +1,8 @@
-<h1>Editing assignment</h1>
+<h1>BLAH</h1>
 
-<%= error_messages_for :assignment %>
+<%= render :partial => 'inplace' %>
 
-<% form_for(@assignment) do |f| %>
-  <p>
-    <b>Name</b><br />
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <b>Course</b><br />
-    <%= f.text_field :course_id %>
-  </p>
-
-  <p>
-    <b>Possible points</b><br />
-    <%= f.text_field :possible_points %>
-  </p>
-
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @assignment %> |
+<div class="buttons">
+<%= link_to 'Show', @assignment, :class=> "positive" %> |
 <%= link_to 'Back', assignments_path %>
+</div>
