--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -8,10 +8,12 @@
   <%#= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'layout' %>
   <%= stylesheet_link_tag 'tables' %>
+  <%= stylesheet_link_tag 'buttons' %>
   <%= stylesheet_link_tag 'menu' %>
   <%= javascript_include_tag 'prototype' %>
 </head>
 <body>
+
 
 <div id="header">
 	<div class="login"><a href="/login">Login</a></div>
@@ -20,16 +22,8 @@
 
 	<div class="flash"><%= flash[:notice] %></div>
 
-	<div id="menucontainer">
-		<ul id="menu">
-      <%= layout_link_to "Home", "/" %>
-      <%= layout_link_to "Teachers", teachers_path %>
-      <%= layout_link_to "Students", students_path %>
-      <%= layout_link_to "Courses", courses_path %>
-      <%= layout_link_to "Assignments", assignments_path %>
-		</ul>
-	</div>
-                    
+	<%= menu_builder(controller.controller_name) %>
+	                    
 </div>
 
 <div id="container">
