--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,8 +1,6 @@
 <h1>BLAH</h1>
 
-<%= render :partial => 'inplace' %>
-
 <div class="buttons">
-<%= link_to 'Show', @assignment, :class=> "positive" %> |
-<%= link_to 'Back', assignments_path %>
+	<%= link_to 'Show', @assignment, :class=> "positive" %>
+	<%= link_to 'Back', assignments_path %>
 </div>
