--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,6 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Gradesheet<%#= controller.action_name.capitalize + "ing" %></title>
+  <%= stylesheet_link_tag 'forms' %>
   <%#= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'layout' %>
   <%= stylesheet_link_tag 'tables' %>
