--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -35,7 +35,7 @@
 	width:140px;	
 }
 .entryform input {
-	float:left;
+/*	float:left;*/
 	font-size:12px;
 	padding:4px 2px;
 	border:solid 1px #aacfe4;
