--- a/public/stylesheets/tables.css
+++ b/public/stylesheets/tables.css
@@ -35,7 +35,7 @@ caption {
 	text-align: left;
 	font-size: 1.4em;
 	font-weight: bold;
-	text-transform: uppercase;
+/*	text-transform: uppercase;*/
 	color: #333;
 	background: transparent;
 }
