--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,23 +1,21 @@
 
+
 <table class="master">
+	<caption>Teacher: <%= @courses[0].teacher.full_name %></caption>
   <thead>
     <tr>
       <th>Name</th>
       <th>Term</th>
-      <th>Grade scale</th>
-      <th>Course att</th>
-      <th>Course type</th>
-      <th>Teacher</th>
+      <th>Grading Scale</th>
+      <th>Course Type</th>
     </tr>
   </thead>
   <tfoot>
     <tr>
       <th>Name</th>
       <th>Term</th>
-      <th>Grade scale</th>
-      <th>Course att</th>
-      <th>Course type</th>
-      <th>Teacher</th>
+      <th>Grading Scale</th>
+      <th>Course Type</th>
     </tr>
   </tfoot>
 
@@ -25,11 +23,9 @@
 <% for course in @courses %>
   <tr>
     <td><%=h course.name %></td>
-    <td><%=h course.term_id %></td>
-    <td><%=h course.grade_scale_id %></td>
-    <td><%=h course.course_att_id %></td>
-    <td><%=h course.course_type_id %></td>
-    <td><%=h course.teacher_id %></td>
+    <td><%=h course.term.name %></td>
+    <td><%=h course.grading_scale.name %></td>
+    <td><%=h course.course_type.name %></td>
   </tr>
 <% end %>
   </tbody>
