--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,37 +1,28 @@
-<h1>Editing Teacher</h1>
+<%= error_messages_for :teacher, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<%= error_messages_for :Teacher %>
+<div class="entryform">
+	<% form_for(@teacher) do |f| %>
+			<%= content_tag( :h1, "#{@teacher.full_name}" ) %>
+			<p>Change the information and hit SAVE</p>
+		
+			<label>ID</label>
+			<%= f.text_field :short_name %>
 
-<% form_for(@teacher) do |f| %>
-	<p>
-    <b>Short Name</b><br />
-    <%= f.text_field :short_name %>
-  </p>
+			<label>First Name</label>
+			<%= f.text_field :first_name %>
 
-  <p>
-    <b>First Name</b><br />
-    <%= f.text_field :first_name %>
-  </p>
+			<label>Last Name</label>
+			<%= f.text_field :last_name %>
+			
+			<label>Email Address</label>
+			<%= f.text_field :email %>
 
-	<p>
-    <b>Last Name</b><br />
-    <%= f.text_field :last_name %>
-  </p>
-
-	<p>
-    <b>Email Address</b><br />
-    <%= f.text_field :email %>
-  </p>
-
-	<p>
-    <b>Site</b><br />
-		<%= collection_select :teacher, :site_id, Site.find(:all), :id, :name %>
-  </p>
-
-<div style="width: 200px; margin: auto; border: 1px solid red; ">
-    <%= f.submit " Save " %>    
-    <%= f.submit " Cancel " %>    
+			<label>Site</label>
+			<%= collection_select :teacher, :site_id, Site.find(:all), :id, :name %>
+	
+			<div class="buttons">
+			<%= submit_tag 'Save', :class=>"positive" %><%= link_to 'Cancel', teachers_path, :class => "positive" %>		
+			</div>
+	<% end %>
 </div>
-<% end %>
 
-<%= link_to 'Back', teachers_path %>
