--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,16 +1,18 @@
+<h1>YOU SHOULDN'T SEE THIS</h1>
+
 <p>
   <b>Name:</b>
-  <%=h @assignment.name %>
+  <%#=h @assignment.name %>
 </p>
 
 <p>
   <b>Course:</b>
-  <%=h @assignment.course_id %>
+  <%#=h @assignment.course_id %>
 </p>
 
 <p>
   <b>Possible points:</b>
-  <%=h @assignment.possible_points %>
+  <%#=h @assignment.possible_points %>
 </p>
 
 <div class="buttons">
