--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,45 +1,35 @@
-<table>
-<% for course in @courses %>
-  <tr>
-    <td><%=h course.name %></td>
-    <td><%=h course.term_id %></td>
-    <td><%=h course.grade_scale_id %></td>
-    <td><%=h course.course_att_id %></td>
-    <td><%=h course.course_type_id %></td>
-  </tr>
-<% end %>
-</table>
-
+<div class="entryform">
 <p>
   <b>Name:</b>
-  <%#=h @course.name %>
+  <%=h @course.name %>
+</p>
+
+<p>
+  <b>Type:</b>
+  <%=h @course.course_type.name %>
 </p>
 
 <p>
   <b>Teacher:</b>
-  <%#=h @course.teacher_id %>
+  <%=h @course.teacher_id %>
 </p>
 
 <p>
   <b>Term:</b>
-  <%#=h @course.term_id %>
+  <%=h @course.term.name %>
 </p>
 
 <p>
-  <b>Grade scale:</b>
-  <%#=h @course.grade_scale_id %>
+  <b>Grading scale:</b>
+  <%=h @course.grading_scale.name %>
 </p>
 
 <p>
   <b>Course att:</b>
-  <%#=h @course.course_att_id %>
-</p>
-
-<p>
-  <b>Course type:</b>
-  <%#=h @course.course_type_id %>
+  <%=h @course.course_att_id %>
 </p>
 
 
+</div>
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
