--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,29 +1,23 @@
-
+<%= debug @course %>
 <% @assignment.course_id = @course %>
+<%= error_messages_for :assignment, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<h1>New assignment</h1>
+<div class="entryform">
+	<% form_for(@assignment) do |f| %>
+			<%= content_tag( :h1, "New Assignment" ) %>
+			<p>Change the information and hit SAVE</p>
+		
+			<label>Assignment Name</label>
+			<%= f.text_field :name %>
 
-<%= error_messages_for :assignment %>
+			<label>Course</label>
+			<%= collection_select :assignment, :course_id, Course.find(:all), :id, :name %>
 
-<% form_for(@assignment) do |f| %>
-  <p>
-    <b>Name</b><br />
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <b>Course</b><br />
-		<%= collection_select :assignment, :course_id, Course.find(:all), :id, :name %>
-	</p>
-
-  <p>
-    <b>Possible points</b><br />
-    <%= f.text_field :possible_points %>
-  </p>
-
-  <p>
-    <%= f.submit "Create" %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', assignments_path %>
+			<label>Possible Points</label>
+	    <%= f.text_field :possible_points %>
+		
+			<div class="buttons">
+			<%= submit_tag 'Save', :class=>"positive" %><%= link_to 'Cancel', assignments_path, :class => "positive" %>		
+			</div>
+	<% end %>
+</div>
