--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -9,7 +9,7 @@
 			<%= f.text_field :name %>
 
 			<label>Course</label>
-			<%= collection_select :assignment, :course_id, Course.find(:all), :id, :name %>
+			<%= collection_select :assignment, :course_id, @courses, :id, :name %>
 
 			<label>Possible Points</label>
 			<%= f.text_field :possible_points %>
@@ -23,3 +23,4 @@
 	<% end %>
 </div>
 
+<%#= debug session %>
