--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,31 +1,31 @@
 
-<table class="master">
+<table class="list">
 	<thead>
-	  <tr>
-	    <th>Student</th>
-	    <th>Full Name</th>
-	    <th>Course</th>
-	    <th>Course Name</th>
-	  </tr>
+		<th>Course</th>
+		<th>Term</th>
 	</thead>
-	<tfoot>
-	  <tr>
-	    <th>Student</th>
-	    <th>Full Name</th>
-	    <th>Course</th>
-	    <th>Course Name</th>
-	  </tr>
-	</tfoot>
-	
-<% for enrollment in @enrollments %>
-  <tr>
-    <td><%=h enrollment.student_id %></td>
-    <td><%=h User.find(enrollment.student_id).full_name %></td>
-    <td><%=h enrollment.course_id %></td>
-    <td><%=h Course.find(enrollment.course_id).name %></td>
-  </tr>
-<% end %>
+	<tbody>
+		<% for course in @courses -%>
+		<tr class="<%= cycle('odd', 'even') %>" onclick="<%= 
+					remote_function(
+								:update => 'enrollements_list', 
+								:url => enrollment_url(course), :action => :show, :method => :get,
+								:loading => "Element.show('busy')",
+								:complete => "Element.hide('busy')") %>" />
+			<%= content_tag :td, course.name %>
+			<%= content_tag :td, course.term.name %>			
+		</tr>
+		<% end -%>
+	</tbody>
 </table>
+
+
+<div id="enrollments_list">
+	<%= render :partial => "enrollment_list" %>
+</div>
+
+
+
 
 <br />
 
