--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -26,10 +26,10 @@ student = true if users[1].class.to_s == "Student"
 
 	<tbody>
 		<%- for u in users -%>
-		<% link_path = url_for( :action => :edit, :escape => true ) + "/" + u.id.to_s %>
-			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= link_path %>'"/>
+			<tr class="<%= cycle('odd', 'even') %>" onclick="<%= link_to(u.full_name, u) %>"/>
+				<%= link_to_function(u.full_name, u) %>
 				<td><%=h u.short_name %></td>
-				<td><%= link_to ( u.full_name, link_path ) %></td>
+				<td><%= link_to(u.full_name, u) %></td>
 				<td><%=h u.email %></td>
 				<td><%=h u.site.name %></td>
 				<%- if student -%>
