--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,4 +1,4 @@
-
+<% content_for :left do -%>
 <table class="list">
 	<thead>
 		<th>Course</th>
@@ -18,6 +18,7 @@
 		<% end -%>
 	</tbody>
 </table>
+<% end -%>
 
 <div id="assignments_list">
 	<%= render :partial => "assignment_list" %>
