--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,11 +5,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Gradesheet<%#= controller.action_name.capitalize + "ing" %></title>
-  <%= stylesheet_link_tag 'forms' %>
+  <%#= stylesheet_link_tag 'forms' %>
   <%#= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'layout' %>
   <%= stylesheet_link_tag 'tables' %>
-  <%= stylesheet_link_tag 'buttons' %>
+  <%#= stylesheet_link_tag 'buttons' %>
   <%= stylesheet_link_tag 'menu' %>
   <%= javascript_include_tag 'prototype' %>
 </head>
@@ -24,13 +24,18 @@
 	<div class="flash"><%= flash[:notice] %></div>
 
 	<%= menu_builder(controller.controller_name) %>
+	                    
 </div>
 
-<div id="container">
 
-	<div id="content" class="column">
-		<%= yield  %>
-	</div>
+<div id="container">
+  <div id="center" class="column">
+    <%= yield  %>
+  </div>
+
+  <div id="left" class="column">
+    <%= yield :left  %>
+  </div>
   
 </div>
 
